--- a/resources/css/comfortable-sakai.css
+++ b/resources/css/comfortable-sakai.css
@@ -105,6 +105,15 @@
     width: 30px;
 }
 
+.cs-minisakai-entry-header {
+    padding: 8px 8px 8px 8px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #252121;
+    display: block;
+    transition: 0.3s;
+}
+
 .cs-minisakai-danger {
     position: relative;
     padding: 0.1em 0.5em;
@@ -138,6 +147,15 @@
     border-left: solid 6px var(--miniOther);
     border-bottom: solid 2px var(--miniOther);
     background: #dad6d6;
+    border-radius: 5px;
+}
+
+.cs-minisakai-checked {
+    position: relative;
+    padding: 0.1em 0.5em;
+    border-left: solid 6px var(--miniChecked);
+    border-bottom: solid 2px var(--miniChecked);
+    background: #c6d1fc;
     border-radius: 5px;
 }
 
@@ -254,6 +272,28 @@
     border-radius: 20px 20px 20px 20px;
 }
 
+.cs-minisakai-list .cs-course-checked {
+    font-size: 12px;
+    font-weight: 400 !important;
+    color: #f7f7f7;
+    width: max-content;
+    padding: 3px 10px;
+    margin: -12px 0 0 -5px;
+    background: var(--miniChecked);
+    border-radius: 20px 20px 20px 20px;
+}
+
+.cs-minisakai-list .cs-course-checked:hover {
+    font-size: 12px;
+    font-weight: 400 !important;
+    color: #f7f7f7;
+    width: max-content;
+    padding: 3px 10px;
+    margin: -12px 0 0 -5px;
+    background: var(--miniChecked);
+    border-radius: 20px 20px 20px 20px;
+}
+
 .cs-minisakai-list .cs-course-late {
     font-size: 12px;
     font-weight: 400 !important;
@@ -323,6 +363,16 @@
 }
 
 .cs-assignment-other:last-child {
+    margin-bottom: 5px;
+}
+
+.cs-assignment-checked {
+    border: solid 2px var(--miniChecked);
+    border-radius: 10px 10px 10px 10px;
+    margin-bottom: 20px;
+}
+
+.cs-assignment-checked:last-child {
     margin-bottom: 5px;
 }
 
