--- a/resources/css/sub-sakai.css
+++ b/resources/css/sub-sakai.css
@@ -73,6 +73,7 @@ span {
     --miniWarning: #d7aa57;
     --miniSuccess: #62b665;
     --miniOther: #777777;
+    --miniChecked: #6582ff;
     --miniLate: #212121;
     --textColor: #464646;
     --bgColor: #cacaca;
